typescript/checker/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithOnlyNullValueOrUndefinedValue.ts.stderr
error: TS2365 {
    span: Span {
        lo: BytePos(
            23,
        ),
        hi: BytePos(
            34,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithOnlyNullValueOrUndefinedValue.ts:2:10
  |
2 | var r1 = null + null;
  |          ^^^^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            45,
        ),
        hi: BytePos(
            61,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithOnlyNullValueOrUndefinedValue.ts:3:10
  |
3 | var r2 = null + undefined;
  |          ^^^^^^^^^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            72,
        ),
        hi: BytePos(
            88,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithOnlyNullValueOrUndefinedValue.ts:4:10
  |
4 | var r3 = undefined + null;
  |          ^^^^^^^^^^^^^^^^

error: TS2365 {
    span: Span {
        lo: BytePos(
            99,
        ),
        hi: BytePos(
            120,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithOnlyNullValueOrUndefinedValue.ts:5:10
  |
5 | var r4 = undefined + undefined;
  |          ^^^^^^^^^^^^^^^^^^^^^

